<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            android:id="@+id/first_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@color/cardview_light_background"
            app:cardCornerRadius="@dimen/card_view_radius"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FAFAFA">


                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_share_white_24dp"
                    android:tint="@color/nav_icon_tint"/>

                <ImageView
                    android:id="@+id/img_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/img_share"
                    android:padding="5dp"
                    android:src="@drawable/ic_favorite_white_24dp"
                    android:tint="@color/nav_icon_tint"/>


                <TextView
                    android:id="@+id/txt_pro_name"
                    android:layout_width="368dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_share"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    tools:text="رب انار نارنی از دسته های چاشنی و خوردنی و خوشمزه"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/second_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_card"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@color/cardview_light_background"
            app:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAFAFA">

                <LinearLayout
                    android:id="@+id/price_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="center|end"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <TextView
                        android:id="@+id/txt_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="تومان"
                        android:textColor="@color/details_red_color"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txt_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:padding="2dp"
                        android:textColor="@color/details_red_color"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        tools:text="7500"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/first_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price_lay"
                    android:gravity="center|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/support_sell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:text="@string/support_sell"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/check_text"
                        android:textStyle="bold"/>


                    <ImageView
                        android:layout_width="@dimen/check_icon"
                        android:layout_height="@dimen/check_icon"
                        android:layout_gravity="end|center"
                        android:layout_margin="5dp"
                        android:gravity="end|center"
                        android:padding="3dp"
                        android:src="@drawable/ic_check_white_24dp"
                        android:tint="@color/nav_icon_tint"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/second_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/first_check"
                    android:gravity="center|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/support_packing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:maxLines="2"
                        android:padding="5dp"
                        android:text="@string/support_packing"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/check_text"
                        android:textStyle="bold"/>


                    <ImageView
                        android:layout_width="@dimen/check_icon"
                        android:layout_height="@dimen/check_icon"
                        android:layout_gravity="end|center"
                        android:layout_margin="5dp"
                        android:gravity="end|center"
                        android:padding="3dp"
                        android:src="@drawable/ic_check_white_24dp"
                        android:tint="@color/nav_icon_tint"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/third_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/second_check"
                    android:gravity="center|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/support_ready_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:text="@string/support_ready_send"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/check_text"
                        android:textStyle="bold"/>


                    <ImageView
                        android:layout_width="@dimen/check_icon"
                        android:layout_height="@dimen/check_icon"
                        android:layout_gravity="end|center"
                        android:layout_margin="5dp"
                        android:gravity="end|center"
                        android:padding="3dp"
                        android:src="@drawable/ic_check_white_24dp"
                        android:tint="@color/nav_icon_tint"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/third_check"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/add_shopping_shape"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/text_add_shopping"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/ic_add_shopping_cart_white_24dp"/>


                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/third_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/second_card"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@color/cardview_light_background"
            app:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAFAFA">

                <sanaebadi.ir.tandorosti.manage.ExpandableTextView
                    android:id="@+id/txt_see_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="6dp"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/check_text"
                    android:textStyle="bold"
                    />


            </RelativeLayout>


        </android.support.v7.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/third_card"
            android:gravity="center|end">

            <TextView
                android:id="@+id/txt_same"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/txt_same_pro"
                android:textColor="@color/nav_icon_tint"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/same_pro_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_same"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="@dimen/recycler_margin"/>

        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>